<resources>
    <string name="app_name">StepUpEntrepreneurPrototype</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_user_email">Email Address</string>
    <string name="hint_password">Password</string>
    <string name="content_description_start_icon">Start Icon</string>
    <string name="hint_user_first_name">FirstName</string>
    <string name="hint_user_surname">Surname</string>
    <string name="confirm_hint_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="go_to_login">Login</string>
    <string name="sign_in">Login</string>
    <string name="register">Register</string>
    <string name="create_an_account">Create an account</string>
    <string name="entrepreneurs">Entrepreneurs</string>
    <string name="investors">Investors</string>
    <string name="banks">Bank</string>
    <string name="user_type_tittle">I am</string>
    <string name="an_admin">An Admin</string>
    <string name="an_investor">An Investor</string>
    <string name="an_entrepreneur">An Entrepreneur</string>
    <string name="add_details">Add Personal Details</string>
    <string name="hint_user_gender">Gender</string>
    <string name="hint_user_dob">Date of Birth</string>
    <string name="hint_user_place_of_birth">Place of Birth</string>
    <string name="hint_user_home">Home District</string>
    <string name="hint_user_ta">T/A</string>
    <string name="hint_user_current_address">Current Residence Address</string>
    <string name="hint_user_current_residence">Current Residence District</string>
    <string name="hint_user_id_number">National ID Number</string>
    <string name="hint_user_kin_name">Next of Kin</string>
    <string name="hint_user_disability">Any Disability</string>
    <string name="continue_button">Continue</string>
    <string name="add_user_image">Add Profile Image</string>
    <string name="add_user_id">Add Verification ID</string>
    <string name="skip_button">Skip</string>
    <string name="select_id">Select Id</string>
    <string name="idImageView">ID ImageView</string>
    <string name="profileImageView">Profile ImageView</string>
    <string name="select_image">Select Image</string>
    <string name="skip">Skip</string>
    <string name="take_photo">Take Photo</string>
    <string name="favorites">Favorites</string>
    <string name="academy">Academy</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
</resources>