<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddEntrepreneurVerificationIdFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="52dp"
        android:text="@string/add_user_id"
        android:textSize="@dimen/large_title_size"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView5"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/idImageView" />
    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="16dp"
        android:text="@string/select_id"
        app:strokeColor="@color/purple_700"
        app:strokeWidth="2dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_700"
        app:layout_constraintEnd_toEndOf="@+id/materialCardView5"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/materialCardView5"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView5" />

    <Button
        android:id="@+id/button2"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="32dp"
        android:text="@string/skip_button"
        app:strokeColor="@color/purple_700"
        app:strokeWidth="2dp"
        android:backgroundTint="@color/white"
        android:textColor="@color/purple_700"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/continueButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="24dp"
        android:text="@string/continue_button"
        app:strokeColor="@color/purple_700"
        app:strokeWidth="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toTopOf="@+id/button2" />

</androidx.constraintlayout.widget.ConstraintLayout>