<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddEntrepreneurDetailsFragment">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content">

       <TextView
           android:id="@+id/textView2"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="52dp"
           android:text="@string/add_details"
           android:textSize="@dimen/large_title_size"
           android:textStyle="bold"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout3"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="20dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_first_name"
           app:endIconMode="clear_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textView2">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/firstNameEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textCapWords"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout4"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_surname"
           app:endIconMode="clear_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/surnameEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textCapWords"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
           android:id="@+id/textInputLayout5"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_gender"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

           <AutoCompleteTextView
               android:id="@+id/genderEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="none" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout6"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_dob"
           app:endIconMode="clear_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/dobEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:focusable="false"
               android:inputType="none"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout7"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_place_of_birth"
           app:endIconMode="clear_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout6">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/placeOfBirthEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textCapWords"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
           android:id="@+id/textInputLayout8"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_home"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout7">

           <AutoCompleteTextView
               android:id="@+id/homeDistrictEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="none" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout9"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_ta"
           app:endIconMode="clear_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout8">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/taEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textCapWords"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout10"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_current_address"
           app:endIconMode="clear_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout9">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/currentAddressEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textCapWords"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout11"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_current_residence"
           app:endIconMode="clear_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout10">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/currentResidenceEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textCapWords"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout12"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_id_number"
           app:endIconMode="clear_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout11">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/idEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textCapWords"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout13"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_kin_name"
           app:endIconMode="clear_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout12">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/kinNameEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textCapWords"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.textfield.TextInputLayout
           android:id="@+id/textInputLayout14"
           android:layout_width="0dp"
           android:layout_height="wrap_content"
           android:layout_marginStart="24dp"
           android:layout_marginTop="8dp"
           android:layout_marginEnd="24dp"
           android:hint="@string/hint_user_disability"
           app:endIconMode="clear_text"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintHorizontal_bias="0.0"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout13">

           <com.google.android.material.textfield.TextInputEditText
               android:id="@+id/disabilityEditText"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
               android:inputType="textCapWords"
               android:maxLines="1" />
       </com.google.android.material.textfield.TextInputLayout>

       <com.google.android.material.button.MaterialButton
           android:id="@+id/continueButton"
           android:layout_width="0dp"
           android:layout_height="@dimen/button_height"
           android:layout_marginStart="24dp"
           android:layout_marginTop="16dp"
           android:layout_marginEnd="24dp"
           android:layout_marginBottom="32dp"
           android:padding="10dp"
           android:text="@string/continue_button"
           android:textSize="18sp"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/textInputLayout14" />


   </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>