<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddEntrepreneurImageFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cameraLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/cameraCaptureButton"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginBottom="50dp"
            android:elevation="2dp"
            android:scaleType="fitCenter"
            android:text="@string/take_photo"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <androidx.camera.view.PreviewView
            android:id="@+id/previewView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/uploadLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="52dp"
            android:text="@string/add_user_image"
            android:textSize="@dimen/large_title_size"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/materialCardView4"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_marginTop="16dp"
            app:cardCornerRadius="15dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2">

            <ImageView
                android:id="@+id/profileImageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="#DAD8D8"
                android:contentDescription="@string/profileImageView"
                android:scaleType="centerCrop"
                tools:src="@tools:sample/avatars" />
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginTop="24dp"
            android:backgroundTint="@color/white"
            android:text="@string/select_image"
            android:textColor="@color/purple_700"
            app:layout_constraintEnd_toEndOf="@+id/materialCardView4"
            app:layout_constraintStart_toStartOf="@+id/materialCardView4"
            app:layout_constraintTop_toBottomOf="@+id/materialCardView4"
            app:strokeColor="@color/purple_700"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/skipButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/white"
            android:text="@string/skip"
            android:textColor="@color/purple_700"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/continueButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:strokeColor="@color/purple_700"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/continueButton"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/continue_button"
            app:layout_constraintBottom_toBottomOf="@+id/skipButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/skipButton"
            app:layout_constraintTop_toTopOf="@+id/skipButton"
            app:strokeColor="@color/purple_700"
            app:strokeWidth="2dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>